# rust-1d-premix-laminar-flame

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  TODO.md  VERIFICATION_REPORT.md
.github/workflows/: deploy-docs.yml
data/: cantera_ch4air_initial.csv  cantera_h2air_initial.csv
data/chemkin_test/: mech.inp
docs/: book.toml
docs/src/: SUMMARY.md  chemistry.md  flame.md  getting-started.md  introduction.md
examples/: ch4air_phi1.toml  hydrogen_air.toml  hydrogen_air_direct.toml  methane_air.toml
scripts/: cantera_h2air_solution.py  plot_flame.html  verify_cantera.py
src/: lib.rs  main.rs
src/chemistry/: kinetics.rs  mechanism.rs  mod.rs  species.rs  thermo.rs
src/chemistry/parser/: cantera_yaml.rs  chemkin.rs  mod.rs
src/flame/: README.md  domain.rs  jacobian.rs  mod.rs  refine.rs  residual.rs  solver_driver.rs  state.rs
src/io/: README.md  input.rs  mod.rs  output.rs
src/solver/: README.md  banded.rs  dense.rs  mod.rs  newton.rs  pseudo_transient.rs
src/transport/: README.md  collision_integrals.rs  mixture.rs  mod.rs  species_props.rs
tests/: ch4air_validation.rs  h2air_validation.rs
